# mappers

./: .coveragerc  .flake8  404.html  README.md  azure-pipelines.yml  index.html  mkdocs.yml  package.json  pyproject.toml  pytest.ini  release.config.js  tox.ini
changelog/: index.html
docs/: changelog.md  faq.md  index.md  installation.md  usage.md
faq/: index.html
installation/: index.html
search/: search_index.json
src/_mappers/: compat.py  factory.py  mapper.py  validation.py
src/_mappers/sources/: __init__.py  django.py
src/_mappers/sources/django/: __init__.py  analyze.py  factory.py
src/_mappers/sources/sqlalchemy/: __init__.py  analyze.py  factory.py
src/mappers/: __init__.py  exceptions.py
tests/: conftest.py  test_configuration.py  test_data_sources.py  test_validation.py
tests/helpers/: mddoctest.py  pyproject.toml  readers.py
tests/helpers/django_project/: fixtures.py  models.py  repositories.py  settings.py
tests/helpers/django_project/migrations/: 0001_initial.py
tests/helpers/entities/: __init__.py  attrs.py  attrs_annotated.py  dataclasses.py  pydantic_dataclasses.py  pydantic_model.py
tests/helpers/examples/: attrs.py  attrs_annotated.py  dataclasses.py  pydantic_model.py
tests/helpers/readers/: __init__.py  decorators.py
tests/helpers/sqlalchemy_project/: fixtures.py  repositories.py  tables.py
usage/: index.html
