[tool.poetry]
name = "mappers"
version = "2.0.1"

description = "Declarative mappers from ORM models to domain entities. And back again!"
readme = "README.md"
license = "BSD-2-Clause"

homepage = "https://dry-python.org/"
repository = "https://github.com/dry-python/mappers/"
documentation = "https://mappers.readthedocs.io/"

authors = [
    "Artem Malyshev <proofit404@gmail.com>",
    "Nikita Sobolev <mail@sobolevn.me>",
]

keywords = [
  "dry-python",
  "mappers",
  "ddd",
  "domain driven design",
  "django models",
  "attrs",
  "ORM",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development",
]

packages = [
    { include = "_mappers", from = "src" },
    { include = "mappers", from = "src" },
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
