[tool.poetry]
name = "mappers"
version = "2.1.0"

description = "Declarative mappers to domain entities."
readme = "docs/index.md"
license = "BSD-2-Clause"

homepage = "https://pypi.org/project/mappers/"
repository = "https://github.com/proofit404/mappers/"
documentation = "https://proofit404.github.io/mappers/"

authors = ["Artem Malyshev <proofit404@gmail.com>"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development",
]

packages = [
    { include = "_mappers", from = "src" },
    { include = "mappers", from = "src" },
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
