[tool.poetry]
name = "helpers"
version = "0"
description = ""
authors = []
packages = [
    { include = "django_project" },
    { include = "entities" },
    { include = "helpers.py" },
    { include = "mddoctest.py"},
    { include = "readers.py" },
]

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
